<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daya.sofa.sofa.WarrantyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/guarantee_activator_content_textView"
            style="@style/explain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/warranty_explain" />

        <EditText
            android:id="@+id/guarantee_activator_invoiceNumber_editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical|right"
            android:inputType="numberDecimal"
            android:background="@drawable/selector_item_warranty_num_factor"
            android:hint="@string/warranty_num_factor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:weightSum="6"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/guarantee_activator_invoiceDate_year_editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:gravity="center_vertical|right"
                android:layout_weight="2"
                android:background="@drawable/selector_item_warranty_num_factor"
                android:focusable="true"
                android:hint="@string/warranty_year"
                android:inputType="number"
                android:maxLength="4"
                android:padding="5dp"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/guarantee_activator_invoiceDate_month_editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:gravity="center_vertical|right"
                android:layout_weight="1"
                android:background="@drawable/selector_item_warranty_num_factor"
                android:focusable="true"
                android:hint="@string/warranty_month"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:padding="5dp"
                android:singleLine="true"/>


            <EditText
                android:id="@+id/guarantee_activator_invoiceDate_day_editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:maxLength="2"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:gravity="center_vertical|right"
                android:background="@drawable/selector_item_warranty_num_factor"
                android:hint="@string/warranty_date"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/warranty_date_factor"
                android:textSize="15dp" />

        </LinearLayout>

        <Spinner
            android:id="@+id/guarantee_activator_branch_spinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_item_warranty_agent" />

        <ImageView
            android:id="@+id/guarantee_activator_submit_imageView"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_item_warranty_activation"/>


    </LinearLayout>
</ScrollView>